# Hippodetector

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  REFACTORING_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt  run_contradiction_pipeline.py  run_pipeline.sh  sample_politicians.txt
.streamlit/: config.toml
LLM/: archia_hello_world.py  archia_model_types.py  hf_embedding_gemma.py  test_gemini.py
RAG/: README.md  build_issue_profile.py  build_voting_issue_profile.py  contradiction_schema.py  extract_member_stances.py  extract_stances.example.toml  extract_stances.py  load_embeddings.py  search.py  setup_qdrant.py  topic_matching.py
data/: archia_models.json  congress_bill_summaries_last_10_years.json  congress_bill_summaries_last_1_years.json  congress_bills_voted_compact_last_10_years.json  congress_bills_voted_compact_last_1_year.json  congress_members.json  press_release_embeddings_member_index.json  press_releases_by_bioguide.json  press_releases_by_bioguide_test.json  votes_A000055.json  votes_B001292.json  votes_B001316.json  votes_B001327.json  votes_G000597.json  votes_J000302.json  votes_K000404.json  votes_M001206.json  votes_O000086.json  votes_O000172.json  votes_P000197.json  votes_R000305.json  votes_S001212.json
dataset/: billDataGrabber.py  billDataGrabber_legiscan.py  build_member_profile.py  build_press_release_embeddings_index.py  build_voted_bills_compact.py  build_voting_profile.py  dataGrabber.py  embed_issue_profile_embeddings.py  embed_press_release_embeddings.py  fetch_bill_details.py  (+5 more)
(+699 files in other folders)
