[project]
name = "hippodetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx[http2]>=0.27.0",
    "h2>=4.1.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "streamlit>=1.41.0",
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.66.0",
]
